CalculatorParser.py
# Generated from Calculator.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CalculatorParser ( Parser ):

    grammarFileName = "Calculator.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'if'", "'then'", "'else'", "'='", 
                     "';'", "'+'", "'-'", "'*'", "'/'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "VAR", "IF", "THEN", "ELSE", "ASSIGN", 
                      "SEMI", "PLUS", "MINUS", "MUL", "DIV", "LPAREN", "RPAREN", 
                      "REL_OP", "ID", "NUMBER", "WS" ]

    RULE_prog = 0
    RULE_comando = 1
    RULE_declaracao = 2
    RULE_atribuicao = 3
    RULE_estruturaIf = 4
    RULE_comparacao = 5
    RULE_expressao = 6
    RULE_termo = 7
    RULE_fator = 8

    ruleNames =  [ "prog", "comando", "declaracao", "atribuicao", "estruturaIf", 
                   "comparacao", "expressao", "termo", "fator" ]

    EOF = Token.EOF
    VAR=1
    IF=2
    THEN=3
    ELSE=4
    ASSIGN=5
    SEMI=6
    PLUS=7
    MINUS=8
    MUL=9
    DIV=10
    LPAREN=11
    RPAREN=12
    REL_OP=13
    ID=14
    NUMBER=15
    WS=16

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CalculatorParser.EOF, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.ComandoContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.SEMI)
            else:
                return self.getToken(CalculatorParser.SEMI, i)

        def getRuleIndex(self):
            return CalculatorParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = CalculatorParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 18
                    self.comando()
                    self.state = 19
                    self.match(CalculatorParser.SEMI) 
                self.state = 25
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 51206) != 0):
                self.state = 26
                self.comando()


            self.state = 29
            self.match(CalculatorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CalculatorParser.RULE_comando

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EstruturaIfCmdContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalculatorParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def estruturaIf(self):
            return self.getTypedRuleContext(CalculatorParser.EstruturaIfContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaIfCmd" ):
                listener.enterEstruturaIfCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaIfCmd" ):
                listener.exitEstruturaIfCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaIfCmd" ):
                return visitor.visitEstruturaIfCmd(self)
            else:
                return visitor.visitChildren(self)


    class DeclaracaoCmdContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalculatorParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaracao(self):
            return self.getTypedRuleContext(CalculatorParser.DeclaracaoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracaoCmd" ):
                listener.enterDeclaracaoCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracaoCmd" ):
                listener.exitDeclaracaoCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracaoCmd" ):
                return visitor.visitDeclaracaoCmd(self)
            else:
                return visitor.visitChildren(self)


    class ExpressaoCmdContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalculatorParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressao(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressaoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressaoCmd" ):
                listener.enterExpressaoCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressaoCmd" ):
                listener.exitExpressaoCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressaoCmd" ):
                return visitor.visitExpressaoCmd(self)
            else:
                return visitor.visitChildren(self)


    class AtribuicaoCmdContext(ComandoContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CalculatorParser.ComandoContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atribuicao(self):
            return self.getTypedRuleContext(CalculatorParser.AtribuicaoContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicaoCmd" ):
                listener.enterAtribuicaoCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicaoCmd" ):
                listener.exitAtribuicaoCmd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicaoCmd" ):
                return visitor.visitAtribuicaoCmd(self)
            else:
                return visitor.visitChildren(self)



    def comando(self):

        localctx = CalculatorParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = CalculatorParser.DeclaracaoCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.declaracao()
                pass

            elif la_ == 2:
                localctx = CalculatorParser.AtribuicaoCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.atribuicao()
                pass

            elif la_ == 3:
                localctx = CalculatorParser.EstruturaIfCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.estruturaIf()
                pass

            elif la_ == 4:
                localctx = CalculatorParser.ExpressaoCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 34
                self.expressao()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(CalculatorParser.VAR, 0)

        def ID(self):
            return self.getToken(CalculatorParser.ID, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao" ):
                return visitor.visitDeclaracao(self)
            else:
                return visitor.visitChildren(self)




    def declaracao(self):

        localctx = CalculatorParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(CalculatorParser.VAR)
            self.state = 38
            self.match(CalculatorParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CalculatorParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CalculatorParser.ASSIGN, 0)

        def expressao(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return CalculatorParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtribuicao" ):
                return visitor.visitAtribuicao(self)
            else:
                return visitor.visitChildren(self)




    def atribuicao(self):

        localctx = CalculatorParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(CalculatorParser.ID)
            self.state = 41
            self.match(CalculatorParser.ASSIGN)
            self.state = 42
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstruturaIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(CalculatorParser.IF, 0)

        def comparacao(self):
            return self.getTypedRuleContext(CalculatorParser.ComparacaoContext,0)


        def THEN(self):
            return self.getToken(CalculatorParser.THEN, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.ComandoContext,i)


        def ELSE(self):
            return self.getToken(CalculatorParser.ELSE, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_estruturaIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstruturaIf" ):
                listener.enterEstruturaIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstruturaIf" ):
                listener.exitEstruturaIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstruturaIf" ):
                return visitor.visitEstruturaIf(self)
            else:
                return visitor.visitChildren(self)




    def estruturaIf(self):

        localctx = CalculatorParser.EstruturaIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_estruturaIf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(CalculatorParser.IF)
            self.state = 45
            self.comparacao()
            self.state = 46
            self.match(CalculatorParser.THEN)
            self.state = 47
            self.comando()
            self.state = 50
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 48
                self.match(CalculatorParser.ELSE)
                self.state = 49
                self.comando()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.ExpressaoContext,i)


        def REL_OP(self):
            return self.getToken(CalculatorParser.REL_OP, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_comparacao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparacao" ):
                listener.enterComparacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparacao" ):
                listener.exitComparacao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparacao" ):
                return visitor.visitComparacao(self)
            else:
                return visitor.visitChildren(self)




    def comparacao(self):

        localctx = CalculatorParser.ComparacaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comparacao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.expressao()
            self.state = 53
            self.match(CalculatorParser.REL_OP)
            self.state = 54
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.TermoContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.TermoContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.PLUS)
            else:
                return self.getToken(CalculatorParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.MINUS)
            else:
                return self.getToken(CalculatorParser.MINUS, i)

        def getRuleIndex(self):
            return CalculatorParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressao" ):
                return visitor.visitExpressao(self)
            else:
                return visitor.visitChildren(self)




    def expressao(self):

        localctx = CalculatorParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expressao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.termo()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7 or _la==8:
                self.state = 57
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 58
                self.termo()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CalculatorParser.FatorContext)
            else:
                return self.getTypedRuleContext(CalculatorParser.FatorContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.MUL)
            else:
                return self.getToken(CalculatorParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(CalculatorParser.DIV)
            else:
                return self.getToken(CalculatorParser.DIV, i)

        def getRuleIndex(self):
            return CalculatorParser.RULE_termo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermo" ):
                listener.enterTermo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermo" ):
                listener.exitTermo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermo" ):
                return visitor.visitTermo(self)
            else:
                return visitor.visitChildren(self)




    def termo(self):

        localctx = CalculatorParser.TermoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_termo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.fator()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9 or _la==10:
                self.state = 65
                _la = self._input.LA(1)
                if not(_la==9 or _la==10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 66
                self.fator()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(CalculatorParser.NUMBER, 0)

        def ID(self):
            return self.getToken(CalculatorParser.ID, 0)

        def LPAREN(self):
            return self.getToken(CalculatorParser.LPAREN, 0)

        def expressao(self):
            return self.getTypedRuleContext(CalculatorParser.ExpressaoContext,0)


        def RPAREN(self):
            return self.getToken(CalculatorParser.RPAREN, 0)

        def getRuleIndex(self):
            return CalculatorParser.RULE_fator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFator" ):
                listener.enterFator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFator" ):
                listener.exitFator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFator" ):
                return visitor.visitFator(self)
            else:
                return visitor.visitChildren(self)




    def fator(self):

        localctx = CalculatorParser.FatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fator)
        try:
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(CalculatorParser.NUMBER)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(CalculatorParser.ID)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.match(CalculatorParser.LPAREN)
                self.state = 75
                self.expressao()
                self.state = 76
                self.match(CalculatorParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





